...
    @Published var showLossAlert = false
    @Published var showInvalidWordAlert = false
    @Published var letterStatuses: [Character: LetterStatus] = [:]

    let letters = "QWERTYUIOPASDFGHJKLZXCVBNM"
    
    static let enterKey = "ENTER"
    static let deleteKey = "DELETE"

    init() {
        if let secretWordEnv = ProcessInfo.processInfo.environment["SECRET_WORD"] {
            if fiveLetterWords.contains(secretWordEnv) {
                self.secretWord = secretWordEnv
...
